@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,27 +26,22 @@ public class ProductAiQueryService {
 
         // (1) Save user question
         memoryService.saveUserMessage(userId, naturalQuestion);
+        memoryService.touchTtl(userId);
 
-        // Load last messages
-        List<ChatMessage> history = memoryService.loadMemory(userId);
-        StringBuilder historyText = new StringBuilder();
+        // Load last messages (DISABLED CONTEXT)
+        // List<ChatMessage> history = memoryService.loadMemory(userId);
+        // StringBuilder historyText = new StringBuilder();
+        // for (ChatMessage msg : history) {
+        //     if (msg instanceof UserMessage) {
+        //         historyText.append("User: ").append(msg).append("\n");
+        //     } else if (msg instanceof AiMessage) {
+        //         historyText.append("Assistant: ").append(msg).append("\n");
+        //     }
+        // }
 
-        for (ChatMessage msg : history) {
-            if (msg instanceof UserMessage) {
-                historyText.append("User: ").append(((UserMessage) msg).text()).append("\n");
-            } else if (msg instanceof AiMessage) {
-                historyText.append("Assistant: ").append(((AiMessage) msg).text()).append("\n");
-            }
-        }
-
-        // Build prompt
+        // Build prompt (WITHOUT CONTEXT)
         String fullPrompt = """
             You are an expert SQL generator for an Audio E-Commerce platform.
-
-            ===========================
-            CONVERSATION HISTORY
-            ===========================
-            %s
 
             ===========================
             USER REQUEST
@@ -58,22 +52,25 @@ public class ProductAiQueryService {
             SCHEMA
             ===========================
             %s
-            """.formatted(historyText, naturalQuestion, schemaLoader.loadSchema());
+            """.formatted(naturalQuestion, schemaLoader.loadSchema());
 
-        // Generate SQL
-        String sql = agent.generateSql(fullPrompt);
+        // Generate SQL (DISABLED)
+        // String sql = agent.generateSql(fullPrompt);
 
-        List<Map<String, Object>> rows;
-        try {
-            rows = sqlExecutor.runSelect(sql);
-        } catch (Exception e) {
-            return Map.of(
-                "count", 0,
-                "error", e.getMessage(),
-                "sql", sql,
-                "message", "AI generate SQL error"
-            );
-        }
+        // List<Map<String, Object>> rows;
+        // try {
+        //     rows = sqlExecutor.runSelect(sql);
+        // } catch (Exception e) {
+        //     return Map.of(
+        //         "count", 0,
+        //         "error", e.getMessage(),
+        //         "sql", sql,
+        //         "message", "AI generate SQL error"
+        //     );
+        // }
+
+        // Convert to product IDs (DISABLED)
+        List<Map<String, Object>> rows = new ArrayList<>();
 
         // Convert to product IDs
         List<UUID> productIds = rows.stream()
@@ -85,7 +82,7 @@ public class ProductAiQueryService {
             return Map.of(
                 "count", 0,
                 "message", "Không tìm thấy sản phẩm phù hợp.",
-                "warnings", List.of("Không có sản phẩm đúng với lịch sử và yêu cầu hiện tại."),
+                "warnings", List.of("Không có sản phẩm phù hợp với yêu cầu hiện tại."),
                 "items", List.of()
             );
         }
@@ -114,28 +111,11 @@ public class ProductAiQueryService {
         // Build summaries
         List<Map<String, Object>> summaries = products.stream()
                 .map(this::buildSummary)
-                .collect(Collectors.toList());
+                .toList();
 
-        // ================================
-        // (2) SAVE AI MEMORY — NEW VERSION
-        // ================================
-        StringBuilder memory = new StringBuilder();
-        memory.append("Kết quả tìm kiếm lần này (" + productIds.size() + " sản phẩm):\n");
-
-        int index = 1;
-        for (Map<String, Object> s : summaries) {
-            memory.append(index++)
-                  .append(". ")
-                  .append(s.get("brand"))
-                  .append(" - ")
-                  .append(s.get("name"))
-                  .append(" | Giá: ").append(s.get("effectivePrice"))
-                  .append("\n");
-        }
-
-        memory.append("Hãy dùng số thứ tự để tham chiếu lại ở lần chat sau.");
-
-        memoryService.saveAssistantMessage(userId, memory.toString());
+        // IMPORTANT: Không lưu search summary vào memory nữa để tránh "tìm theo ngữ cảnh".
+        // Nếu muốn tìm lại, user phải search lại hoặc gửi productId.
+        memoryService.touchTtl(userId);
 
         return Map.of(
             "count", productIds.size(),
@@ -169,7 +149,8 @@ public class ProductAiQueryService {
                 "brand", p.getBrandName(),
                 "rating", rating,
                 "effectivePrice", priceStr,
-                "summary", p.getBrandName() + " " + p.getName() + " – giá " + priceStr + ", đánh giá " + rating
+                "summary", p.getBrandName() + " " + p.getName() + " – giá " + priceStr + ", đánh giá " + rating,
+                "description", p.getDescription() // Thêm mô tả sản phẩm
         );
     }
 
@@ -188,5 +169,51 @@ public class ProductAiQueryService {
             }
         }
         return grouped;
+    }
+
+    /**
+     * Tìm kiếm thông tin sản phẩm dựa trên productId và lưu làm LAST_PRODUCT
+     */
+    public Optional<Product> findAndAdviseProduct(String userId, String productId) {
+        try {
+            UUID productUUID = UUID.fromString(productId);
+            Optional<Product> productOpt = productRepository.findById(productUUID);
+
+            if (productOpt.isPresent()) {
+                Product product = productOpt.get();
+
+                StringBuilder productInfo = new StringBuilder();
+                productInfo.append("productId: ").append(product.getProductId()).append("\n")
+                        .append("name: ").append(nullToEmpty(product.getName())).append("\n")
+                        .append("brand: ").append(nullToEmpty(product.getBrandName())).append("\n")
+                        .append("price: ").append(product.getFinalPrice() != null ? product.getFinalPrice() : product.getPrice()).append("\n")
+                        .append("description: ").append(nullToEmpty(product.getDescription()));
+
+                if (product.getAttributeValues() != null && !product.getAttributeValues().isEmpty()) {
+                    productInfo.append("\nattributes:\n");
+                    for (var attributeValue : product.getAttributeValues()) {
+                        if (attributeValue.getAttribute() != null) {
+                            productInfo.append("- ")
+                                    .append(attributeValue.getAttribute().getAttributeName())
+                                    .append(": ")
+                                    .append(attributeValue.getValue())
+                                    .append("\n");
+                        }
+                    }
+                }
+
+                memoryService.saveLastProductInfo(userId, productInfo.toString().trim());
+
+                return Optional.of(product);
+            }
+        } catch (IllegalArgumentException e) {
+            memoryService.saveLastProductInfo(userId, "productId không hợp lệ: " + productId);
+        }
+
+        return Optional.empty();
+    }
+
+    private static String nullToEmpty(String s) {
+        return s == null ? "" : s;
     }
 }
